update with some guides in pptx

--- a/angular.json
+++ b/angular.json
@@ -134,7 +134,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -180,7 +182,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "07132ee3-4454-40bd-9acd-ad9e5c794aeb"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
